# get

./: .gitignore  README.md  TODO.md  get.go  go.mod  go.sum  install.sh  main.go  main_test.go  miqt-qt6-documentation.txt  pyproject.toml
cmd/cli/: main.go
cmd/gui/: main.go
debian/: control  debhelper-build-stamp  files  get-gui.1  get-gui.install  get-gui.manpages  get-gui.postinst.debhelper  get-gui.prerm.debhelper  get.1  get.manpages  get.postinst.debhelper  get.prerm.debhelper  override_dh_auto_install.sh  rules
debian/get-gui/DEBIAN/: control  md5sums  postinst  prerm
debian/get-gui/usr/share/get/qml/qml/: Main.qml
debian/get/DEBIAN/: control  md5sums  postinst  prerm
debian/get/usr/lib/python3/dist-packages/get/: __init__.py  cli.py  github.py  manager.py  utils.py
debian/get/usr/share/doc/get/: copyright
debian/tmp/usr/share/applications/: get-gui.desktop
get-gui-deb/DEBIAN/: control
get-gui-deb/usr/share/applications/: get-gui.desktop
internal/github/: client.go
internal/manager/: install.go  list.go  manager.go  remove.go  update.go  upgrade.go
internal/output/: cli.go  gui.go  interface.go  output.go
internal/tools/: parser.go
pkg/github/: client.go
pkg/manager/: install.go  list.go  manager.go  remove.go  update.go  upgrade.go
pkg/output/: output.go
pkg/tools/: parser.go
src/get/: cli.py  gui.py  manager.py  utils.py
src/get/qml/: Main.qml
