[project]
name = "get"
version = "0.5.0"
description = "A package manager for GitHub releases"
authors = [
    {name = "tranquil", email = "tranquil@example.com"},
]
dependencies = [
    "typer[all]>=0.9.0",
    "requests>=2.31.0",
    "rich>=13.7.0",
    "platformdirs>=4.2.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
get = "get.cli:app"
get-gui = "get.gui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
